# repostats

./: .env.example  .gitignore  =2.0.0  README.md  action.yml  pyproject.toml
.github/: README.md  TEMPLATE_README.md
.github/workflows/: main.yml  test.yml
.traffic/: clones.csv  clones_chart.txt  views.csv  views_chart.txt
github_repo_traffic/: data.py  readme.py
repostats/: data.py  readme.py
